--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .ipynb_checkpoints/_이규민[재학 _ 컴퓨터.전자시스템공학전공] - homework_1_2024_student-checkpoint.ipynb
 .DS_Store
 BOJ/tmp/tmp.py
+codeForce/
+programmers/
